color contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ a:hover {
 
 .current {
   text-transform: uppercase;
-	color: #ffbcc9;
+	color: #b10f44;
 }
 
 .btn:active {
